[project]
name = "random_forest_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mutomasa", email = "mutomasa118@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.0",
]

[project.scripts]
random-forest-app = "random_forest_app.app:main"
random_forest_app = "random_forest_app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
